--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.7'
 services:
   web:
     build: .
-    command: python /code/django_project/manage.py runserver 0.0.0.0:8000
+    command: python /code/src/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
